--- a/src/schooltool/gradebook/locales/es.po
+++ b/src/schooltool/gradebook/locales/es.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-09-13 17:49+0000\n"
-"Last-Translator: Paco Molinero <paco@byasl.com>\n"
+"POT-Creation-Date: 2010-09-30 20:05+0300\n"
+"PO-Revision-Date: 2010-10-01 08:15+0000\n"
+"Last-Translator: Fitoschido <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-14 05:02+0000\n"
+"X-Launchpad-Export-Date: 2010-10-02 05:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /src/schooltool/gradebook/activity.py:51
@@ -224,7 +224,11 @@ msgstr "Categorías de actividades"
 msgid "Report Sheet Templates"
 msgstr "Plantillas de hojas de informas"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:127
+#: /src/schooltool/gradebook/browser/configure.zcml:101
+msgid "Download Gradebook CSV"
+msgstr "Descargar libro de calificaciones en CSV"
+
+#: /src/schooltool/gradebook/browser/configure.zcml:138
 msgid "Add a Worksheet"
 msgstr "Añadir una hoja de trabajo"
 
@@ -247,11 +251,11 @@ msgstr "Editar"
 msgid "Edit Report Sheet"
 msgstr "Editar hoja de informe"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:227
+#: /src/schooltool/gradebook/browser/configure.zcml:238
 msgid "New Report Activity"
-msgstr "Nuevo informe de actividades"
+msgstr "Nueva Actividad de Reporte"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:279
+#: /src/schooltool/gradebook/browser/configure.zcml:290
 #: /src/schooltool/gradebook/browser/gradebook_grade_activity.pt:5
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:5
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:5
@@ -505,7 +509,7 @@ msgstr "Período:"
 #: /src/schooltool/gradebook/browser/mygrades.pt:19
 #: /src/schooltool/gradebook/browser/pdf_views.py:755
 msgid "Term"
-msgstr "Término"
+msgstr "Período"
 
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:49
 #: /src/schooltool/gradebook/browser/mygrades.pt:33
@@ -529,6 +533,14 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:146
 msgid "(sort)"
 msgstr "(ordenar)"
+
+#: /src/schooltool/gradebook/browser/gradebook_overview.pt:254
+msgid "S"
+msgstr "S"
+
+#: /src/schooltool/gradebook/browser/gradebook_overview.pt:254
+msgid "Shortcut: Alt-S"
+msgstr "Atajo de teclado: Alt-S"
 
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:13
 msgid "You do not teach or attend any classes."
@@ -607,6 +619,22 @@ msgstr ""
 "La operación que intentó no puede completarse ya que no hay períodos "
 "configurados en su instancia de SchoolTool. Por favor solicite a un "
 "administrador que cree un período e intente la operación nuevamente."
+
+#: /src/schooltool/gradebook/browser/no_report_sheets.pt:4
+msgid "No Report Sheets"
+msgstr "No hay hojas de reporte"
+
+#: /src/schooltool/gradebook/browser/no_report_sheets.pt:10
+msgid ""
+"The operation you attempted cannot be completed because there are currently "
+"no report sheets set up in your SchoolTool instance. Please have a user with "
+"administration access set up at least one report sheet and try the operation "
+"again."
+msgstr ""
+"La operación que acaba de intentar no se puedo completar porque actualmente "
+"no hay hojas de reporte configuradas en su instancia de SchoolTool. Por "
+"favor obtenga acceso como administrador  para que configure al menos una "
+"hoja de reporte e intente de nuevo."
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:203
 msgid "Report Card"
@@ -753,6 +781,15 @@ msgstr "Máximo"
 msgid "Highest integer score value possible"
 msgstr "Valor entero de nota más alto posible"
 
+#: /src/schooltool/gradebook/browser/report_worksheet_overview.pt:14
+#: /src/schooltool/gradebook/browser/worksheet_overview.pt:14
+msgid ""
+"A report sheet template defines the activities to be included in a report "
+"sheet deployed to each section in a term or year."
+msgstr ""
+"Una plantilla de hoja de informe define las actividades a incluir en una "
+"hoja de reporte instalada en cada sección en un período o año."
+
 #: /src/schooltool/gradebook/browser/request_absences_by_day.pt:26
 #: /src/schooltool/gradebook/interfaces.py:146
 msgid "Date"
@@ -796,10 +833,6 @@ msgstr "Solicitar informe"
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:42
 msgid "Report Activity"
 msgstr "Informe de actividades"
-
-#: /src/schooltool/gradebook/browser/request_failing_report.pt:60
-msgid "Minimum Passing Score"
-msgstr "Nota mínima para pasar"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:52
 msgid "Student Reports"
@@ -853,11 +886,15 @@ msgstr "Solicitar informe de aplazamientos por período"
 msgid "Choose a report activity"
 msgstr "Elija una actividad de informe"
 
-#: /src/schooltool/gradebook/browser/request_reports.py:187
-msgid "Choose a minimum passing score"
-msgstr "Elija un puntaje mínimo de aprobación"
+#: /src/schooltool/gradebook/browser/request_reports.py:189
+msgid "Maximum Passing Score"
+msgstr "Puntuación máxima pasante"
 
-#: /src/schooltool/gradebook/browser/request_reports.py:200
+#: /src/schooltool/gradebook/browser/request_reports.py:191
+msgid "Minimum Passing Score"
+msgstr "Nota mínima para pasar"
+
+#: /src/schooltool/gradebook/browser/request_reports.py:209
 msgid "You must specify both a report activity and a minimum passing score."
 msgstr ""
 "Debe especificar una actividad de informe y una nota mínima para pasar."
@@ -941,14 +978,6 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:18
 msgid "Delete"
 msgstr "Borrar"
-
-#: /src/schooltool/gradebook/browser/worksheet_overview.pt:14
-msgid ""
-"A report sheet template defines the activities to be included in a report "
-"sheet deployed to each section in a term or year."
-msgstr ""
-"Una plantilla de hoja de informe define las actividades a incluir en una "
-"hoja de reporte instalada en cada sección en un período o año."
 
 #: /src/schooltool/gradebook/configure.zcml:302
 msgid "Gradebook API"
@@ -1041,7 +1070,7 @@ msgstr "Columnas a imprimirse en la libreta de notas."
 
 #: /src/schooltool/gradebook/interfaces.py:168
 msgid "Activities to be printed in the outline section."
-msgstr ""
+msgstr "Puede imprimir las actividades en la sección de esquema."
 
 #: /src/schooltool/gradebook/interfaces.py:202
 #: /src/schooltool/gradebook/interfaces.py:307
@@ -1138,8 +1167,15 @@ msgid "View gradebook data for a section."
 msgstr "Ver datos del Libro de notas para una sección."
 
 #: /src/schooltool/gradebook/security.zcml:33
-msgid "Administration can grade students"
-msgstr "Los administradores pueden calificar a los estudiantes"
+msgid "Only the instructor of a section can edit its gradebook."
+msgstr ""
+"Sólo el instructor de una sección puede editar este libro de calificaciones."
+
+#: /src/schooltool/gradebook/security.zcml:33
+msgid ""
+"The instructor of a section and school administration can edit a section's "
+"gradebook."
+msgstr ""
 
 #: /src/schooltool/requirement/browser/configure.zcml:8
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:4
@@ -1229,11 +1265,19 @@ msgstr "Las puntuaciones repetidas no son permitidas."
 msgid "Duplicate abbreviations are not allowed."
 msgstr "Abreviaciones duplicadas no son permitidas."
 
-#: /src/schooltool/requirement/browser/scoresystem.py:259
-msgid "Exisiting Score System"
-msgstr "Sistema de puntuación existente"
+#: /src/schooltool/requirement/browser/scoresystem.py:256
+msgid "Yes"
+msgstr "Sí"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:264
+#: /src/schooltool/requirement/browser/scoresystem.py:258
+msgid "No"
+msgstr "No"
+
+#: /src/schooltool/requirement/browser/scoresystem.py:293
+msgid "Existing Score System"
+msgstr "Sistema de puntaje existente"
+
+#: /src/schooltool/requirement/browser/scoresystem.py:298
 msgid "Custom score system"
 msgstr "Sistema de puntuación personalizado"
 
@@ -1315,6 +1359,10 @@ msgstr "Porcentaje bajo"
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:79
 msgid "Add a lower score"
 msgstr "Añadir puntuación mínima"
+
+#: /src/schooltool/requirement/browser/scoresystem_add.pt:92
+msgid "passing score:"
+msgstr "puntuación pasante:"
 
 #: /src/schooltool/requirement/browser/scoresystem_view.pt:3
 #: /src/schooltool/requirement/browser/scoresystem_view.pt:7
