Fix typo: workskeet.

--- a/src/schooltool/gradebook/locales/de.po
+++ b/src/schooltool/gradebook/locales/de.po
@@ -932,7 +932,7 @@ msgstr "Arbeitsblatt löschen"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 "Sind Sie sicher, dass Sie das Arbeitsblatt mit den gesamten Aktivitäten "
