--- a/src/schooltool/gradebook/locales/en_GB.po
+++ b/src/schooltool/gradebook/locales/en_GB.po
@@ -920,10 +920,10 @@ msgstr "Delete Worksheet"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:18
