--- a/src/schooltool/gradebook/locales/fr.po
+++ b/src/schooltool/gradebook/locales/fr.po
@@ -884,7 +884,7 @@ msgstr "Effacer la feuille de travail"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 "Êtes-vous sur de vouloir effacer cette feuille de travail ainsi que toutes "
