--- a/src/schooltool/gradebook/locales/nb.po
+++ b/src/schooltool/gradebook/locales/nb.po
@@ -884,7 +884,7 @@ msgstr "Slett regneark"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 
