--- a/src/schooltool/gradebook/locales/nl.po
+++ b/src/schooltool/gradebook/locales/nl.po
@@ -963,7 +963,7 @@ msgstr "Werkblad verwijderen"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 "Weet u zeker dat u dit werkblad met alle activiteiten wilt verwijderen?"
