--- a/src/schooltool/gradebook/locales/pl.po
+++ b/src/schooltool/gradebook/locales/pl.po
@@ -922,7 +922,7 @@ msgstr "Wykasuj kartę pracy"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 "Czy jesteś pewny że chcesz wykasować kartę pracy razem ze wszystkimi "
