--- a/src/schooltool/gradebook/locales/uk.po
+++ b/src/schooltool/gradebook/locales/uk.po
@@ -886,7 +886,7 @@ msgstr "Вилучити Сторінку"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 
