--- a/src/schooltool/gradebook/locales/vi.po
+++ b/src/schooltool/gradebook/locales/vi.po
@@ -921,7 +921,7 @@ msgstr "Xóa một bảng tính"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
-"Are you sure you want to delete this workskeet together with all its "
+"Are you sure you want to delete this worksheet together with all its "
 "activities?"
 msgstr ""
 "Bạn có chắc là muốn xóa bảng tính này cùng tất cả các hoạt động trong đó "
